[gd_scene load_steps=4 format=3 uid="uid://xhris2vpcaeh"]

[ext_resource type="PackedScene" uid="uid://cg0wi1yv88l" path="res://ui/short_message_box.tscn" id="1_i5aoe"]
[ext_resource type="Script" path="res://level/guide/guideMessage.gd" id="1_i5jfy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cnk6g"]
size = Vector2(64, 74)

[node name="GuideMessage" type="Node2D"]
script = ExtResource("1_i5jfy")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -27)
shape = SubResource("RectangleShape2D_cnk6g")

[node name="ShortMessageBox" parent="." instance=ExtResource("1_i5aoe")]
visible = false
offset_left = -3.0
offset_top = 16.0
offset_right = 37.0
offset_bottom = 56.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
